    - Authorities correctly free policies on bad servers on
      exit. Fixes bug 672.
    - When tunneling an encrypted directory connection, and its first circuit
      fails do not leave it unattached and ask the controller to deal.  Fixes
      the second part of bug 681.
    - Make bridge authorities correctly clean extrainfo store from time to
      time.  Bugfix on 0.2.0.x.

  o Minor features:
    - Allow separate log levels to be configured for different logging
      domains.  For example, this allows one to log all notices, warnings, or
      errors, plus all memory management messages of level debug or higher,
      with: Log [MM] debug-err [*] notice-err file /var/log/tor.
    - Add a malloc_good_size implementation to OpenBSD_malloc_linux.c,
      to avoid unused RAM in buffer chunks and memory pools.
    - Downgrade "sslv3 alert handshake failure" message to INFO.
    - Add a couple of extra warnings to --enable-gcc-warnings for GCC 4.3,
      and stop using a warning that had become unfixably verbose under GCC
      4.3.
    - Start using OpenSSL's RAND_poll() for better (and more portable)
      cross-platform entropy collection again.  We used to use it, then
      stopped using it because of a bug that could crash systems that called
      RAND_poll when they had a lot of fds open.  It looks like the bug got
      fixed in late 2006.  Our new behavior is to call RAND_poll() at
      startup, and to call RAND_poll() when we reseed later only if we
      have a non-buggy OpenSSL version.
    - Speed up parsing and cut down on memory fragmentation by using
      stack-style allocations for parsing directory objects.  Previously,
      this accounted for over 40% of allocations from within Tor's code
      on a typical directory cache.
    - Lots of new unit tests.
    - New --hush command-line option similar to --quiet.  While --quiet
      disables all logging to the console on startup, --hush limits the